--- a/day01/wpf01_basic_app/ex04_wpf_bikeshop/ContactPage.xaml
+++ b/day01/wpf01_basic_app/ex04_wpf_bikeshop/ContactPage.xaml
@@ -6,17 +6,73 @@
       xmlns:local="clr-namespace:ex04_wpf_bikeshop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ContactPage">
+      Title="ContactPage" Loaded="Page_Loaded">
+    <Page.Resources>
+        <local:TwiceConverter x:Key="TwiceConv" />
+    </Page.Resources>
 
-    <Grid HorizontalAlignment="Center" Width="800">
-        <Label Content="받는 사람" HorizontalAlignment="Left" Margin="10,10,0,0" 
-               VerticalAlignment="Top" RenderTransformOrigin="-0.311,0.347"/>
-        <Label Content="내용" HorizontalAlignment="Left" Margin="28,54,0,0" 
-               VerticalAlignment="Top" RenderTransformOrigin="-0.363,0.193"/>
-        <TextBox HorizontalAlignment="Left" Margin="86,24,32,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="704" Height="22" 
-                 ToolTip="받는사람 주소"/>
-        <TextBox HorizontalAlignment="Left" Margin="86,69,32,19" TextWrapping="Wrap" Text="" Width="704"
-                 ToolTip="내용입력"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
+
+            <Label Grid.Row="0" Grid.Column="0" Content="받는사람" HorizontalAlignment="Left" />
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="10" Text="{Binding Path=speed,
+                ElementName=DgBike, Converter = {StaticResource TwiceConv}}" />
+            <Label Grid.Row="1" Grid.Column="0" Content="내용"  />
+            <TextBox Grid.Row="1"  Grid.Column="1" Margin="10" />
+        </Grid>
+
+        <Grid Grid.Row="1">
+            <StackPanel Orientation="Horizontal">
+                <ListBox Width="200" Height="60" Margin="10">
+                    <Label Content="첫번째 요소" />
+                    <TextBox Text="두번째 요소" />
+                    <GroupBox Header="세번째 요소">
+                        추가내용
+                    </GroupBox>
+                </ListBox>
+                <ComboBox Width="200" Height="60" Margin="10">
+                    <Label Content="첫번째 요소" />
+                    <TextBox Text="두번째 요소" />
+                    <GroupBox Header="세번째 요소">
+                        추가내용
+                    </GroupBox>
+                </ComboBox>
+                <StackPanel Orientation="Vertical" Margin="10">
+                        <ProgressBar Minimum="0" Maximum="100" Width="300" Height="20" 
+                                     Value="{Binding Path=Value, ElementName=SldValue}"/>
+                        <Slider x:Name="SldValue" Minimum="0" Maximum="100" Width="300" Height="20" />
+                    <TextBlock HorizontalAlignment="Center"
+                           Text="{Binding Value, ElementName=SldValue, StringFormat={} {0:0.0}}"  />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <StackPanel Orientation="Vertical">
+                <Label xmlns:bk="clr-namespace:ex04_wpf_bikeshop">
+                    <bk:Bike x:Name="DgBike" speed="60" color="Brown"   />
+                </Label>
+                <StackPanel x:Name="StpBike">
+                    <TextBox Text="{Binding Path=speed}" />
+                    <Label Content="{Binding Path=color}" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
 
     </Grid>
+
 </Page>
