--- a/day01/wpf01_basic_app/ex04_wpf_bikeshop/MainWindow.xaml
+++ b/day01/wpf01_basic_app/ex04_wpf_bikeshop/MainWindow.xaml
@@ -5,9 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ex04_wpf_bikeshop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="LocalBikeShop" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid Margin="5">
         <Frame x:Name="MainFrame" NavigationUIVisibility="Visible" />
-
     </Grid>
 </Window>
