--- a/day05/wpf05_mvvm_app/ex10_MovieFinder2024/MainWindow.xaml
+++ b/day05/wpf05_mvvm_app/ex10_MovieFinder2024/MainWindow.xaml
@@ -60,10 +60,12 @@
         <DataGrid x:Name="GrdResult" Grid.Row="1" Grid.Column="0" Margin="5"
                   IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding}"
                   Style="{StaticResource MahApps.Styles.DataGrid.Azure}" 
+                  MouseDoubleClick="GrdResult_MouseDoubleClick" 
                   SelectedCellsChanged="GrdResult_SelectedCellsChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Title}" Header="한글제목" FontWeight="Bold" />
                 <DataGridTextColumn Binding="{Binding Original_Title}" Header="원제목"  />
+                <DataGridTextColumn Binding="{Binding Release_Date}" Header="개봉일"  />
                 <DataGridTextColumn Binding="{Binding Popularity, StringFormat={}{0:0:0}}" Header="인기도"  />
                 <DataGridTextColumn Binding="{Binding Vote_Average, StringFormat={}{0:0:0}}" Header="평점"  />
             </DataGrid.Columns>
