--- a/toyproject/wpf_toyproject/toyproject_Daejeon_Dentist/App.xaml
+++ b/toyproject/wpf_toyproject/toyproject_Daejeon_Dentist/App.xaml
@@ -1,18 +1,17 @@
-﻿<Application x:Class="ex10_MovieFinder2024.App"
+﻿<Application x:Class="toyproject_Daejeon_Dentist.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ex10_MovieFinder2024"
+             xmlns:local="clr-namespace:toyproject_Daejeon_Dentist"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!-- MahApps.Metro 적용 스타일 시작 -->
+                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <!-- Theme Temae, Dark/Light, 23색상 적용  -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Amber.xaml" />
+                <!-- Theme setting -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Cobalt.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
-                        
